package edu.hitsz.factory;

public class BossEnemyFactory {
}
